--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,5 @@
     <color name="colorlogo">#014EAA</color>
     <color name="yellow">#FBD109</color>
     <color name="themeL">#25c6da</color>
+    <color name="submit">#17a2b8</color>
 </resources>
