--- a/app/src/main/res/layout/childinfo_form.xml
+++ b/app/src/main/res/layout/childinfo_form.xml
@@ -94,6 +94,7 @@
         android:entries="@array/toilet"
         android:layout_below="@+id/dobm"
         android:layout_toRightOf="@+id/toilet"
+        android:background="@drawable/spinner_background"
          />
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/addressm"
@@ -195,6 +196,7 @@
 
     </com.google.android.material.textfield.TextInputLayout>
     <androidx.appcompat.widget.AppCompatTextView
+        android:layout_marginBottom="10dp"
         android:layout_marginLeft="7dp"
         android:textSize="20dp"
         android:textColor="@color/colorPrimary"
@@ -206,6 +208,8 @@
         android:text="Batch"
         android:layout_below="@id/citym"/>
     <Spinner
+        android:layout_marginBottom="10dp"
+        android:background="@drawable/spinner_background"
         android:textSize="20dp"
         android:gravity="center"
         android:id="@+id/batchs"
@@ -216,6 +220,7 @@
         android:layout_toRightOf="@+id/batch"
         />
     <androidx.appcompat.widget.AppCompatTextView
+        android:layout_marginBottom="10dp"
         android:layout_marginLeft="7dp"
         android:textSize="20dp"
         android:textColor="@color/colorPrimary"
@@ -227,6 +232,8 @@
         android:text="Class"
         android:layout_below="@id/batch"/>
     <Spinner
+        android:layout_marginBottom="10dp"
+        android:background="@drawable/spinner_background"
         android:textSize="20dp"
         android:gravity="center"
         android:id="@+id/classss"
@@ -237,6 +244,7 @@
         android:layout_toRightOf="@+id/classs"
         />
     <androidx.appcompat.widget.AppCompatTextView
+        android:layout_marginBottom="10dp"
         android:layout_marginLeft="7dp"
         android:textSize="20dp"
         android:textColor="@color/colorPrimary"
@@ -248,6 +256,8 @@
         android:text="Divison"
         android:layout_below="@id/classs"/>
     <Spinner
+        android:layout_marginBottom="10dp"
+        android:background="@drawable/spinner_background"
         android:id="@+id/divisons"
         android:layout_width="wrap_content"
         android:layout_height="40dp"
@@ -257,6 +267,7 @@
         android:gravity="center"
         android:textSize="20dp" />
     <androidx.appcompat.widget.AppCompatTextView
+        android:layout_marginBottom="10dp"
         android:layout_marginLeft="7dp"
         android:textSize="20dp"
         android:textColor="@color/colorPrimary"
@@ -268,6 +279,8 @@
         android:text="Year: "
         android:layout_below="@id/divison"/>
     <Spinner
+        android:layout_marginBottom="10dp"
+        android:background="@drawable/spinner_background"
         android:textSize="20dp"
         android:gravity="center"
         android:id="@+id/years"
@@ -278,6 +291,7 @@
         android:layout_toRightOf="@+id/year"
         />
     <androidx.appcompat.widget.AppCompatTextView
+        android:layout_marginBottom="10dp"
         android:layout_marginLeft="7dp"
         android:textSize="20dp"
         android:textColor="@color/colorPrimary"
@@ -289,6 +303,8 @@
         android:text="Term: "
         android:layout_below="@id/year"/>
     <Spinner
+        android:layout_marginBottom="10dp"
+        android:background="@drawable/spinner_background"
         android:textSize="20dp"
         android:gravity="center"
         android:id="@+id/terms"
@@ -299,6 +315,7 @@
         android:layout_toRightOf="@+id/term"
         />
     <androidx.appcompat.widget.AppCompatTextView
+        android:layout_marginBottom="10dp"
         android:layout_marginLeft="7dp"
         android:textSize="20dp"
         android:textColor="@color/colorPrimary"
@@ -310,6 +327,8 @@
         android:text="Blood group: "
         android:layout_below="@id/term"/>
     <Spinner
+        android:layout_marginBottom="10dp"
+        android:background="@drawable/spinner_background"
         android:textSize="20dp"
         android:gravity="center"
         android:id="@+id/bloods"
@@ -320,6 +339,7 @@
         android:layout_toRightOf="@+id/blood"
         />
     <androidx.appcompat.widget.AppCompatTextView
+        android:layout_marginBottom="10dp"
         android:layout_marginLeft="7dp"
         android:textSize="20dp"
         android:textColor="@color/colorPrimary"
@@ -331,6 +351,8 @@
         android:text="Gender: "
         android:layout_below="@id/blood"/>
     <Spinner
+        android:layout_marginBottom="10dp"
+        android:background="@drawable/spinner_background"
         android:textSize="20dp"
         android:gravity="center"
         android:id="@+id/genders"
@@ -341,6 +363,7 @@
         android:layout_toRightOf="@+id/gender"
         />
     <androidx.appcompat.widget.AppCompatTextView
+        android:layout_marginBottom="10dp"
         android:layout_marginLeft="7dp"
         android:textSize="20dp"
         android:textColor="@color/colorPrimary"
@@ -352,6 +375,8 @@
         android:text="Top size: "
         android:layout_below="@id/gender"/>
     <Spinner
+        android:layout_marginBottom="10dp"
+        android:background="@drawable/spinner_background"
         android:textSize="20dp"
         android:gravity="center"
         android:id="@+id/topsizes"
@@ -373,6 +398,7 @@
         android:text="Bottom size: "
         android:layout_below="@id/topsize"/>
     <Spinner
+        android:background="@drawable/spinner_background"
         android:textSize="20dp"
         android:gravity="center"
         android:id="@+id/bottomsizes"
