--- a/app/src/main/res/layout/manageteacher.xml
+++ b/app/src/main/res/layout/manageteacher.xml
@@ -5,6 +5,17 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     >
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recycleview3"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="#eff0f1"
+        android:clickable="true"
+        android:focusable="true"
+        android:padding="8dp"
+        android:scrollbars="vertical">
+
+    </androidx.recyclerview.widget.RecyclerView>
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/filterteacher"
