--- a/app/src/main/res/layout/row_classinfo.xml
+++ b/app/src/main/res/layout/row_classinfo.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_gravity="center_horizontal"
     android:layout_height="wrap_content"
@@ -9,8 +8,7 @@
     android:clickable="true"
     android:focusable="true"
     app:cardUseCompatPadding="true"
-    app:cardCornerRadius="10dp"
-    >
+    app:cardCornerRadius="10dp">
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -23,7 +21,7 @@
             android:layout_alignParentBottom="true"
             android:layout_marginBottom="0dp"
             android:scaleType="fitEnd"
-            android:src="@color/themeL" />
+            android:src="@color/colorPrimary" />
 
         <TextView
             android:id="@+id/name"
