--- a/app/src/main/res/layout/row_student.xml
+++ b/app/src/main/res/layout/row_student.xml
@@ -10,6 +10,13 @@
     android:fadingEdge="horizontal"
     app:cardBackgroundColor="#eff0f1">
 
+    <androidx.appcompat.widget.AppCompatImageView
+        android:layout_width="match_parent"
+        android:layout_height="5dp"
+        android:layout_alignParentBottom="true"
+        android:layout_marginBottom="0dp"
+        android:scaleType="fitEnd"
+        android:src="@color/colorPrimary" />
     <RelativeLayout
         android:id="@+id/main"
         android:layout_width="match_parent"
